AUGREL/src/objects/Forms_EndPointConfig__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>EndPointURL__c</fullName>
        <label>EndPointURL</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceURL__c</fullName>
        <label>ServiceURL</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Name__c</fullName>
        <label>Service Name</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Forms_EndPointConfig</label>
</CustomObject>